ci: ignore tag pushes

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -2,6 +2,10 @@ name: Bump semver git tag
 
 on:
   push:
+    branches:
+      - main
+    tags-ignore:
+      - '**'
 
 jobs:
   bump_semver_git_tag:
