--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -50,20 +50,40 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
+          # Debug: Check git status and configuration
+          echo "=== Git Status ==="
+          git status
+
+          echo "=== Current branch/ref ==="
+          git branch -v
+          git symbolic-ref -q HEAD || git describe --tags --exact-match
+
+          echo "=== All tags ==="
+          git tag -l
+
+          echo "=== Git log with tags ==="
+          git log --oneline --decorate --tags -n 10
+
+          echo "=== Describe output ==="
+          git describe --tags --always
+
+          echo "=== Git remote ==="
+          git remote -v
+
+          # Set remote URL BEFORE running cog
           git remote set-url origin https://x-access-token:${{ steps.app-token.outputs.token }}@github.com/tunedd/${{ github.event.repository.name }}.git
 
-          # Get current tag
-          current_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          # Debug: Check if cog can see the repository properly
+          echo "=== Cog version ==="
+          cog --version
 
-          # Run cog check from latest tag
+          echo "=== Trying cog log ==="
+          cog log || echo "Cog log failed"
+
+          # Try running cog check without --from-latest-tag first
+          echo "=== Trying cog check without flags ==="
+          cog check || echo "Basic cog check failed"
+
+          # Now try with from-latest-tag
+          echo "=== Trying cog check --from-latest-tag ==="
           cog check --from-latest-tag
-
-          # Bump version
-          cog bump --auto --skip-untracked --disable-bump-commit
-
-          # Get new tag
-          new_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
-
-          # Push new tag if different
-          if [ "$current_tag" != "$new_tag" ] && [ -n "$new_tag" ]; then
-            git push
