--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -6,11 +6,6 @@ on:
 jobs:
   bump_semver_git_tag:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/cocogitto/cog:latest
-    env:
-      GIT_PAGER: cat  # Disable pager globally
-      PAGER: cat
 
     steps:
       - name: Set up access token
@@ -27,6 +22,12 @@ jobs:
           fetch-depth: 0
           fetch-tags: true
           token: ${{ steps.app-token.outputs.token }}
+
+      - name: Install cocogitto
+        run: |
+          curl -L -o cog.tar.gz https://github.com/cocogitto/cocogitto/releases/latest/download/cocogitto-5.6.0-x86_64-unknown-linux-musl.tar.gz
+          tar -xzf cog.tar.gz
+          sudo mv cog /usr/local/bin/
 
       - name: Bump version and create tag
         env:
